--- a/hello2.html
+++ b/hello2.html
@@ -5,7 +5,7 @@
 
     </head>
     <body>
-        <h2>Hi 2 bitches!!! </h2>
+        <h2 style=" font-size: 20px">Hi 2 bitches!!! </h2>
 
     </body>
 
