--- a/hello2.html
+++ b/hello2.html
@@ -2,10 +2,14 @@
 <html lang="it">
     <head>
         <title> Hello World Two</title>
-
+        <style>
+            h2 {
+                height: auto;
+            }
+        </style>
     </head>
     <body>
-        <h2 style=" font-size: 20px">Hi 2 bitches!!! </h2>
+        <h2>Hi 2 bitches!! </h2>
 
     </body>
 
